--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -19,7 +19,7 @@
         <h3>Our Projects</h3>
         <p>Far far away, behind the word mountains far from the countries</p>
         <figure>
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="An Image">
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click here to see this project</a>
             <figcaption>This is a clickable image</figcaption>
         </figure>
         <h3>Contact Me</h3>
