--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <li><a href="tweets.html">Tweets</a></li>
+        </nav>
+    </header>
     <h1>My Portfolio</h1>
     <p>I’m Elvis Amiko, 
         a freelance 
