Make a cool website

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,10 +8,14 @@
 <body>
     <header>
         <nav>
-            <li><a href="tweets.html">Tweets</a></li>
+            <ul>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
         </nav>
     </header>
-    <h1>My Portfolio</h1>
+    <main>
+        <article>
+            <h1>My Portfolio</h1>
     <p>I’m Elvis Amiko, 
         a freelance 
         Front-End Web 
@@ -29,5 +33,13 @@
         </figure>
         <h3>Contact Me</h3>
         <p>Contact me at: 555-666-666-777</p>
+        </article>
+        <aside>
+            <p>just reading for now</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by Amiko Elvis - <a href="https://www.figma.com/design/AZX79AjIgWoyWc5kD4yBfl/Wireframe-for-a-Personal-Portfolio-Website?node-id=3-58&node-type=frame&t=d2fsPvSFr4lmbOPY-0" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
