--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,9 +8,21 @@
 <body>
     <header>
         <nav>
-            <li><a href="index.html">Home</a></li>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
         </nav>
     </header>
-    <a href="<blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Version Control with Git &amp; GitHub<br><br>🎯This Week:<br>✍️I understood the importance and fundamentals of version control.<br>✍️I became proficient in using Git for version controlling my projects.<br>✍️I navigated and utilized GitHub for hosting and collaborating on projects.<br><br>How about you?</p>&mdash; Elvis Amiko (@ElvisAmiko) <a href="https://twitter.com/ElvisAmiko/status/1862446501059874929?ref_src=twsrc%5Etfw">November 29, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">My weekly tweet</a>
+    <main>
+       <article>
+        <a href="<blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Version Control with Git &amp; GitHub<br><br>🎯This Week:<br>✍️I understood the importance and fundamentals of version control.<br>✍️I became proficient in using Git for version controlling my projects.<br>✍️I navigated and utilized GitHub for hosting and collaborating on projects.<br><br>How about you?</p>&mdash; Elvis Amiko (@ElvisAmiko) <a href="https://twitter.com/ElvisAmiko/status/1862446501059874929?ref_src=twsrc%5Etfw">November 29, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">My weekly tweet</a>
+       </article>
+       <aside>
+        <p>just reading for now</p>
+       </aside>
+    </main>
+    <footer>
+        <p>Made by Amiko Elvis - <a href="https://www.figma.com/design/AZX79AjIgWoyWc5kD4yBfl/Wireframe-for-a-Personal-Portfolio-Website?node-id=3-58&node-type=frame&t=d2fsPvSFr4lmbOPY-0" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
