Modified index.html again

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,12 +14,12 @@
     <main>
         <article>
             <h1>My Portfolio</h1>
-    <p>I’m Elvis Amiko, 
+    <p>I&#8217;m Elvis Amiko, 
         a freelance 
         Front-End Web 
         Developer</p>
     <h2>About Me</h2>
-    <p>I’m Elvis Amiko, 
+    <p>I&#8217;m Elvis Amiko, 
         a freelance 
         Front-End Web 
         Developer</p>
