--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,22 +9,23 @@
     <header>
         <ul>
             <li><a href="tweets.html">Tweets</a></li>
+            <li><a href="base_index.html">Base</a></li>
         </ul>
     </header>
     <main>
         <article>
             <h1>My Portfolio</h1>
-    <p>I&#8217;m Elvis Amiko, 
+    <p>I&#8217;m Elvis Amiko&#44; 
         a freelance 
         Front-End Web 
         Developer</p>
     <h2>About Me</h2>
-    <p>I&#8217;m Elvis Amiko, 
+    <p>I&#8217;m Elvis Amiko&#44; 
         a freelance 
         Front-End Web 
         Developer</p>
         <h3>Our Projects</h3>
-        <p>Far far away, behind the word mountains far from the countries</p>
+        <p>Far far away&#44; behind the word mountains far from the countries</p>
         <figure>
             <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click here to see this project</a>
             <figcaption>This is a clickable image</figcaption>
