--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <ul>
-            <li><a href="tweets.html">Tweets</a></li>
-            <li><a href="base_index.html">Base</a></li>
-        </ul>
-    </header>
-    <main>
-        <article>
-            <h1>My Portfolio</h1>
-    <p>I&#8217;m Elvis Amiko&#44; 
-        a freelance 
-        Front-End Web 
-        Developer</p>
-    <h2>About Me</h2>
-    <p>I&#8217;m Elvis Amiko&#44; 
-        a freelance 
-        Front-End Web 
-        Developer</p>
-        <h3>Our Projects</h3>
-        <p>Far far away&#44; behind the word mountains far from the countries</p>
-        <figure>
-            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click here to see this project</a>
-            <figcaption>This is a clickable image</figcaption>
-        </figure>
-        <h3>Contact Me</h3>
-        <p>Contact me at: 555-666-666-777</p>
-        </article>
-        <aside>
-            <p>just reading for now</p>
-        </aside>
-    </main>
-    <footer>
-        <p>Made by Amiko Elvis - <a href="https://www.figma.com/design/AZX79AjIgWoyWc5kD4yBfl/Wireframe-for-a-Personal-Portfolio-Website?node-id=3-58&node-type=frame&t=d2fsPvSFr4lmbOPY-0" target="_blank">here</a></p>
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <ul>
+                <li><a href="tweets.html">Tweets</a></li>
+                <li><a href="base_index.html">Base</a></li>
+            </ul>
+        </header>
+        <main>
+            <article>
+                <h1>My Portfolio</h1>
+                <p>I&#8217;m Elvis Amiko&#44; a freelance Front-End Web Developer</p>
+                <h2>About Me</h2>
+                <p>I&#8217;m Elvis Amiko&#44; a freelance Front-End Web Developer</p>
+                <h3>Our Projects</h3>
+                <p>Far far away&#44; behind the word mountains far from the countries</p>
+                <figure>
+                    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click here to see this project</a>
+                    <figcaption>This is a clickable image</figcaption>
+                </figure>
+                <h3>Contact Me</h3>
+                <p>Contact me at: 555-666-666-777</p>
+            </article>
+            <aside>
+                <p>just reading for now</p>
+            </aside>
+        </main>
+        <footer>
+            <p>Made by Amiko Elvis - <a href="https://www.figma.com/design/AZX79AjIgWoyWc5kD4yBfl/Wireframe-for-a-Personal-Portfolio-Website?node-id=3-58&node-type=frame&t=d2fsPvSFr4lmbOPY-0" target="_blank">here</a></p>
+        </footer>
+    </body>
 </html>
