--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,16 +6,13 @@
         <title>Document</title>
     </head>
     <body>
-        Navigation
         <header>
             <ul>
                 <li><a href="tweets.html">Tweets</a></li>
                 <li><a href="base_index.html">Base</a></li>
             </ul>
         </header>
-        This is my Portfolio
         <main>
-            Portfolio
             <article>
                 <h1>My Portfolio</h1>
                 <p>I&#8217;m Elvis Amiko&#44; a freelance Front-End Web Developer</p>
@@ -30,9 +27,8 @@
                 <h3>Contact Me</h3>
                 <p>Contact me at: 555-666-666-777</p>
             </article>
-            Extra Information
             <aside>
-                <p>just reading for now</p>
+                <p>placeholder to add comment thread later</p>
             </aside>
         </main>
         <footer>
