--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -17,7 +17,7 @@
                 <a href="<blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Version Control with Git &amp; GitHub<br><br>🎯This Week:<br>✍️I understood the importance and fundamentals of version control.<br>✍️I became proficient in using Git for version controlling my projects.<br>✍️I navigated and utilized GitHub for hosting and collaborating on projects.<br><br>How about you?</p>&mdash; Elvis Amiko (@ElvisAmiko) <a href="https://twitter.com/ElvisAmiko/status/1862446501059874929?ref_src=twsrc%5Etfw">November 29, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">My weekly tweet</a>
             </article>
             <aside>
-                <p>just reading for now</p>
+                <p>placeholder to add comment thread later</p>
             </aside>
         </main>
         <footer>
