--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,36 @@
                 </figure>
                 <h3>Contact Me</h3>
                 <p>Contact me at: 555-666-666-777</p>
+                <table>
+                    <thead>Information about Learners</thead>
+                    <tbody>
+                      <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                      </tr>
+                      <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                      </tr>
+                      <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                      </tr>
+                      <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                      </tr>
+                      <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                      </tr>   
+                    </tbody>
+                </table>
             </article>
             <aside>
                 <p>placeholder to add comment thread later</p>
