--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
         <h2>Introduction</h2>
         <p>I'm Amiko Elvis a freelance Front-End Web Developer</p>
     </section>
-    <section id="projects">
+    <section id="#projects">
         <h2>Projects</h2>
         <article class="project">
             <h3>Local Rep Project</h3>
