Modified content section of index.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,11 +18,11 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <section id="#introduction">
+    <section id="introduction">
         <h2>Introduction</h2>
         <p>I'm Amiko Elvis a freelance Front-End Web Developer</p>
     </section>
-    <section id="#projects">
+    <section id="projects">
         <h2>Projects</h2>
         <article class="project">
             <h3>Local Rep Project</h3>
@@ -33,7 +33,7 @@
             <p><a href="https://github.com/amikoelvis/My_First_Portfolio" target="_blank">My Personal Portfolio Webpage</a></p>
         </article>
     </section>
-    <section id="#about">
+    <section id="about">
         <h2>About Me</h2>
         <ul>
             <li>Entry-level Electrical Engineer with practical experience in Electrical Systems Design and Installation, and Applied Electronics from internships at Diesel and Motor Engineering PLC and JohnVince Engineering.
@@ -42,7 +42,7 @@
             <li>Strong communicator and critical thinker, with the ability to lead teams, manage projects, and contribute to innovative engineering solutions in dynamic environments.</li>
         </ul>
     </section>
-    <section id="#contact">
+    <section id="contact">
         <h2>Contact</h2>
         <a href="mailto:amikoelvis@gmail.com" target="_blank">Send me an Email</a>
         <a href="www.linkedin.com/in/amikoelvis" target="_blank">LinkedIn</a>
