Add Logo to index.html

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -10,8 +10,9 @@
     <body class="works_on_smartphone">
         <header>
             <ul>
-                <li><a href="tweets.html">Tweets</a></li>
-                <li><a href="base_index.html">Base</a></li>
+              <li class="logo">&#127917;</li>
+              <li><a href="tweets.html">Tweets</a></li>
+              <li><a href="base_index.html">Base</a></li>
             </ul>
         </header>
         <main>
