--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -27,13 +27,15 @@
                 <h3>Contact Me</h3>
                 <p>Contact me at: 555-666-666-777</p>
                 <table>
-                    <thead>Information about Learners</thead>
-                    <tbody>
+                  <caption>Information about Learners</caption>
+                    <thead>
                       <tr>
-                        <th>Name</th>
-                        <th>Age</th>
-                        <th>Country</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Country</th>
                       </tr>
+                    </thead>
+                    <tbody>
                       <tr>
                         <td>John</td>
                         <td>25</td>
