--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is Amiko Elvis Portfolio Website">
+    <meta name="author" content="Amiko Elvis">
     <title>Amiko Elvis - Personal Portfolio</title>
 </head>
 <body>
@@ -20,16 +22,18 @@
     </nav>
     <section id="introduction">
         <h2>Introduction</h2>
-        <p>I'm Amiko Elvis a freelance Front-End Web Developer</p>
+        <p>Hi, I'm Amiko Elvis a freelance Front-End Web Developer</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
         <article class="project">
             <h3>Local Rep Project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, iste nostrum officiis nisi obcaecati earum voluptatem tempora, ipsum reprehenderit fugit eaque, eius quia. Autem dolor et molestias fugit maxime? Recusandae?</p>
             <p><a href="https://github.com/amikoelvis/LocalRepoProject" target="_blank">Initialize a Local Repository and Push to GitHub</a></p>
         </article>
         <article class="projects">
             <h3>Personal Portfolio Webpage</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim aperiam commodi expedita deserunt alias dolores voluptatum magnam quam, reprehenderit sequi consequatur placeat tempore dolor, earum, quasi nihil incidunt quo!</p>
             <p><a href="https://github.com/amikoelvis/My_First_Portfolio" target="_blank">My Personal Portfolio Webpage</a></p>
         </article>
     </section>
@@ -44,7 +48,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <a href="mailto:amikoelvis@gmail.com" target="_blank">Send me an Email</a>
+        <a href="mailto:user@example.com" target="_blank">Send me an Email</a>
         <a href="www.linkedin.com/in/amikoelvis" target="_blank">LinkedIn</a>
         <a href="https://github.com/amikoelvis" target="_blank">Github</a>
     </section>
